infrastructure/k8s/network/allow-ingress-to-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-gateway
  namespace: svc
spec:
  podSelector:
    matchLabels: { app: api-gateway }
  policyTypes: ["Ingress"]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              zone: dmz
      ports:
        - protocol: TCP
          port: 80
