infrastructure/k8s/network/allow-ingress-to-keycloak.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-keycloak
  namespace: security
spec:
  podSelector:
    matchLabels: { app: keycloak }
  policyTypes: ["Ingress"]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              zone: dmz
      ports:
        - protocol: TCP
          port: 8080
