infrastructure/k8s/network/allow-probes-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-probes-gateway
  namespace: svc
spec:
  podSelector:
    matchLabels: { app: api-gateway }
  policyTypes: ["Ingress"]
  ingress:
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 80
