infrastructure/k8s/network/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: { name: default-deny, namespace: dmz }
spec: { podSelector: {}, policyTypes: ["Ingress","Egress"] }
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: { name: default-deny, namespace: svc }
spec: { podSelector: {}, policyTypes: ["Ingress","Egress"] }
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: { name: default-deny, namespace: data }
spec: { podSelector: {}, policyTypes: ["Ingress","Egress"] }
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: { name: default-deny, namespace: security }
spec: { podSelector: {}, policyTypes: ["Ingress","Egress"] }
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: { name: default-deny, namespace: ebanking-backend }
spec: { podSelector: {}, policyTypes: ["Ingress","Egress"] }
